# flake8-datetime-utcnow-plugin

./: .travis.yml  Makefile  README.md  mypy.ini  pyproject.toml  requirements_dev.txt  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
flake8_datetime_utcnow/: __init__.py  linter.py  visitor.py
src/flake8_datetime_utcnow/: __version__.py  linter.py  visitor.py
tests/: __init__.py  test_linter.py
